@@ -127,7 +127,7 @@
 	<h3>Running apps</h3>
 	<div>
 		App menu is available by swipe down on any watch face. Than select application by touch app icon. For return to
-		watch face, press crown buutton.
+		menu from app, press crown button. For returning from menu to watch face, press crwon button on menu screen.
 	</div>
 
 	<a name="power-onoff"></a>
