@@ -3,6 +3,7 @@ cyberWatch 1.3
 REDESIGN: new set of app menu icons
 REDESIGN: remove grasy tones from splash screen
 BUGFIX: touch on blank space in menu do nothing (sshow empty screen before)
+REFACTOR: PEKShort on apps return to app menu by default instead of watch face
 REFACTOR: onSwipe(up|down|left|right) methods instead of handle SwipeVertical/horizontal in apps
 REFACTOR: AppMenu launching from watch faces by swipe up
 REFACTOR: settings screen buttons rendering with fillRoundRect instead circle+rect+circle
